--- a/app/views/hotels/_hotel.html.erb
+++ b/app/views/hotels/_hotel.html.erb
@@ -11,7 +11,7 @@
 
   <p>
     <strong>Picture:</strong>
-    <%= hotel.picture %>
+    <%= image_tag(hotel.picture, height: 100, width: 100) %>
   </p>
 
 </div>
