--- a/app/views/hotels/_hotel.html.erb
+++ b/app/views/hotels/_hotel.html.erb
@@ -14,4 +14,9 @@
     <%= image_tag(hotel.picture, height: 200, width: 200) %>
   </p>
 
+  <p>
+    <strong>City:</strong>
+    <%= hotel.city %>
+  </p>
+  
 </div>
