--- a/app/views/hotels/_form.html.erb
+++ b/app/views/hotels/_form.html.erb
@@ -27,6 +27,11 @@
   </div>
 
   <div>
+    <%= form.label :city, style: "display: block" %>
+    <%= form.text_field :city %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
